--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "symfony/framework-bundle": "^4.4 || ^5.0 || ^6.0 || ^7.0",
-        "doctrine/common": "^2.13 || ^3.0",
-        "doctrine/event-manager": "^1.0 || ^2.0"
+        "php": "^8.0",
+        "symfony/framework-bundle": "^6.0 || ^7.0",
+        "doctrine/common": "^3.0",
+        "doctrine/event-manager": "^2.0"
     },
     "require-dev": {
         "ext-json": "*",
